--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "prepare": "playwright install --with-deps chromium",
     "shot": "node tv-shot/shot.js"
   },
   "dependencies": {
-    "@playwright/test": "^1.46.1"
+    "playwright": "^1.47.2"
   }
 }
