--- a/.github/workflows/shot.yml
+++ b/.github/workflows/shot.yml
@@ -1,54 +1,45 @@
+# .github/workflows/shot.yml
 name: shot
 
 on:
   workflow_dispatch:
     inputs:
       symbol:
-        description: 'TradingView symbol (e.g. BINANCE:ETHUSDT)'
+        description: 'TradingView symbol (e.g. BINANCE:BTCUSDT)'
+        type: string
         required: true
-        type: string
       tfs:
-        description: 'TF list (comma: 15,240,1D)'
-        required: false
-        default: '15,240,1D'
+        description: 'CSV of timeframes (e.g. 240,15,1D)'
         type: string
-      core:
-        description: 'Core name for files (e.g. ETHUSDT)'
         required: false
-        default: 'PAIR'
-        type: string
+        default: '240,15,1D'
 
 jobs:
   grab:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        TF: ${{ fromJSON(format('["{0}"]', inputs.tfs)) }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Use Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
 
       - name: Install deps
-        run: |
-          npm install --no-audit --no-fund
-          npx playwright install --with-deps chromium
+        run: npm ci
+        working-directory: .
+        # если package-lock.json отсутствует — замени на:
+        # run: npm i
 
-      - name: Shoot ${{ matrix.TF }}
+      - name: Shoot ${{ inputs.tfs }}
         env:
           TV_URL: https://chirlickax.github.io/tv-shot/
           SYMBOL: ${{ inputs.symbol }}
-          CORE: ${{ inputs.core }}
-          TF: ${{ matrix.TF }}
-        run: |
-          node tv-shot/shot.js
+          TFS:    ${{ inputs.tfs }}
+        run: node tv-shot/shot.js
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: shots
           path: "*.png"
-          if-no-files-found: warn
