--- a/.github/workflows/tradingview-screenshot.yml
+++ b/.github/workflows/tradingview-screenshot.yml
@@ -1,151 +1,138 @@
-name: TradingView Screenshot Multi-Timeframe
+node << 'EOF'
+const puppeteer = require('puppeteer');
+const fs = require('fs');
 
-on:
-  workflow_dispatch:
-    inputs:
-      symbol:
-        description: 'Trading symbol with exchange (e.g., BINANCE:BTCUSDT)'
-        required: true
-        default: 'BINANCE:BTCUSDT'
-      timeframes:
-        description: 'Comma-separated timeframes (e.g., 240,15,1D)'
-        required: false
-        default: '240,15,1D'
+async function closePopups(page) {
+  // Пытаемся закрыть разные варианты попапов
+  const clickIfExists = async (sel) => {
+    const el = await page.$(sel);
+    if (el) { try { await el.click({ delay: 50 }); } catch {} }
+  };
 
-jobs:
-  screenshot:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  // Куки/consent
+  await clickIfExists('button[aria-label*="Accept"]');
+  await clickIfExists('button:has-text("Accept")');
+  await clickIfExists('button:has-text("I agree")');
+  await clickIfExists('button:has-text("Got it")');
+  await clickIfExists('[data-name="close"]');
+  await clickIfExists('.tv-dialog__close');
+  await clickIfExists('button[aria-label="Close"]');
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+  // Дай странице чуть времени «свернуться»
+  await page.waitForTimeout(800);
+}
 
-      - name: Install dependencies
-        run: |
-          npm init -y
-          npm install puppeteer
+async function waitForChartCanvas(page, timeout = 25000) {
+  // Самый стабильный ориентир — наличие канваса(ов) панели графика
+  // Варианты селекторов, которые обычно есть на /chart
+  const selectors = [
+    'div[data-name="pane"] canvas',
+    'div[data-name="chart-container"] canvas',
+    'table.chart-markup-table canvas',       // старый вариант
+  ];
 
-      - name: Generate screenshots for all timeframes
-        run: |
-          node << 'EOF'
-          const puppeteer = require('puppeteer');
-          const fs = require('fs');
+  const start = Date.now();
+  while (Date.now() - start < timeout) {
+    for (const sel of selectors) {
+      const count = await page.$$eval(sel, els => els.length).catch(() => 0);
+      if (count > 0) return sel;
+    }
+    await page.waitForTimeout(300);
+  }
+  throw new Error('Chart canvas not found within timeout');
+}
 
-          (async () => {
-            const symbolInput = process.env.SYMBOL || 'BINANCE:BTCUSDT';
-            const timeframesStr = process.env.TIMEFRAMES || '240,15,1D';
-            
-            const symbolCore = symbolInput.includes(':') 
-              ? symbolInput.split(':')[1] 
-              : symbolInput;
-            
-            const timeframes = timeframesStr.split(',').map(tf => tf.trim());
-            
-            const tfMap = {
-              '15': '15', '240': '240', '1D': 'D',
-              '4h': '240', '15m': '15', '1d': 'D', 'D': 'D'
-            };
-            
-            console.log(`Processing ${symbolInput} for timeframes: ${timeframes.join(', ')}`);
-            
-            const browser = await puppeteer.launch({
-              headless: 'new',
-              args: [
-                '--no-sandbox',
-                '--disable-setuid-sandbox',
-                '--disable-dev-shm-usage',
-                '--disable-gpu',
-                '--window-size=1920,1080'
-              ]
-            });
-            
-            const screenshots = [];
-            
-            for (const tf of timeframes) {
-              try {
-                const tvInterval = tfMap[tf] || tf;
-                const url = `https://www.tradingview.com/chart/?symbol=${symbolInput}&interval=${tvInterval}`;
-                
-                console.log(`Opening TradingView: ${url}`);
-                
-                const page = await browser.newPage();
-                await page.setViewport({ width: 1920, height: 1080 });
-                
-                await page.goto(url, { 
-                  waitUntil: 'networkidle2', 
-                  timeout: 60000 
-                });
-                
-                console.log(`Waiting for ${tf} chart to load...`);
-                await page.waitForTimeout(12000);
-                
-                try {
-                  await page.evaluate(() => {
-                    const selectors = [
-                      '[data-name="close"]', '.close', '[aria-label="Close"]',
-                      'button[aria-label="Close"]', '.tv-dialog__close',
-                      '[data-role="button"][aria-label="Close"]'
-                    ];
-                    selectors.forEach(selector => {
-                      const elements = document.querySelectorAll(selector);
-                      elements.forEach(el => {
-                        try { el.click(); } catch(e) {}
-                      });
-                    });
-                  });
-                  await page.waitForTimeout(2000);
-                } catch (e) {
-                  console.log('No popups to close');
-                }
-                
-                const filename = `${symbolCore}_${tf}.png`;
-                await page.screenshot({
-                  path: filename,
-                  fullPage: false
-                });
-                
-                console.log(`Screenshot saved: ${filename}`);
-                screenshots.push({ filename, timeframe: tf });
-                
-                await page.close();
-                
-              } catch (error) {
-                console.error(`Error processing timeframe ${tf}:`, error.message);
-              }
-            }
-            
-            await browser.close();
-            
-            fs.writeFileSync('screenshots.json', JSON.stringify({
-              symbol: symbolInput,
-              symbolCore: symbolCore,
-              screenshots: screenshots,
-              timestamp: new Date().toISOString()
-            }));
-            
-            console.log(`Generated ${screenshots.length} screenshots`);
-            
-          })();
-          EOF
-        env:
-          SYMBOL: ${{ github.event.inputs.symbol }}
-          TIMEFRAMES: ${{ github.event.inputs.timeframes }}
+(async () => {
+  const symbolInput = process.env.SYMBOL || 'BINANCE:BTCUSDT';
+  const timeframesStr = process.env.TIMEFRAMES || '240,15,1D';
 
-      - name: Upload screenshots as artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: screenshots
-          path: |
-            *.png
-            screenshots.json
-          retention-days: 1
+  const symbolCore = symbolInput.includes(':')
+    ? symbolInput.split(':')[1]
+    : symbolInput;
 
-      - name: Summary
-        run: |
-          echo "✅ Screenshots generated and uploaded as artifacts"
-          cat screenshots.json
+  const timeframes = timeframesStr.split(',').map(tf => tf.trim());
+  const tfMap = { '15': '15', '240': '240', '1D': 'D', '4h': '240', '15m': '15', '1d': 'D', 'D': 'D' };
+
+  console.log(`Processing ${symbolInput} for timeframes: ${timeframes.join(', ')}`);
+
+  const browser = await puppeteer.launch({
+    headless: 'new',
+    args: [
+      '--no-sandbox',
+      '--disable-setuid-sandbox',
+      '--disable-dev-shm-usage',
+      '--disable-gpu',
+      '--window-size=1920,1080',
+      '--lang=en-US', // чтобы тексты кнопок были предсказуемыми
+    ],
+    defaultViewport: { width: 1920, height: 1080 },
+  });
+
+  const screenshots = [];
+  const errors = [];
+
+  for (const tf of timeframes) {
+    const tvInterval = tfMap[tf] || tf;
+    const url = `https://www.tradingview.com/chart/?symbol=${encodeURIComponent(symbolInput)}&interval=${encodeURIComponent(tvInterval)}`;
+
+    console.log(`\n=== ${tf} → ${url}`);
+    const page = await browser.newPage();
+    await page.setUserAgent('Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/121.0.0.0 Safari/537.36');
+
+    let ok = false;
+
+    try {
+      await page.goto(url, { waitUntil: 'networkidle2', timeout: 60000 });
+      // Первая чистка попапов
+      await closePopups(page);
+
+      // Ждём прогрузку канваса
+      const usedSelector = await waitForChartCanvas(page, 25000);
+      console.log(`Canvas selector present: ${usedSelector}`);
+
+      // Маленькая пауза, даём дорисоваться
+      await page.waitForTimeout(1800);
+
+      const filename = `${symbolCore}_${tf}.png`;
+      await page.screenshot({ path: filename, fullPage: false });
+      console.log(`✅ Saved: ${filename}`);
+      screenshots.push({ filename, timeframe: tf });
+      ok = true;
+
+    } catch (e) {
+      console.error(`❌ Error on ${tf}: ${e.message}`);
+      errors.push({ tf, error: e.message });
+      // Диагностический фуллскрин
+      try {
+        const dbg = `${symbolCore}_${tf}_DEBUG.png`;
+        await page.screenshot({ path: dbg, fullPage: true });
+        console.log(`🩺 Debug saved: ${dbg}`);
+        screenshots.push({ filename: dbg, timeframe: `${tf}_DEBUG` });
+      } catch {}
+    } finally {
+      await page.close().catch(() => {});
+    }
+
+    if (!ok) console.log(`-- ${tf}: failed`);
+  }
+
+  await browser.close();
+
+  // Пишем метаданные
+  fs.writeFileSync('screenshots.json', JSON.stringify({
+    symbol: symbolInput,
+    symbolCore,
+    screenshots,
+    errors,
+    timestamp: new Date().toISOString(),
+  }, null, 2));
+
+  console.log(`\nGenerated: ${screenshots.filter(s => !s.filename.endsWith('_DEBUG.png')).length} OK, ${errors.length} failed.`);
+
+  // Если нет ни одного нормального скрина — падаем job-ой
+  if (!screenshots.some(s => !s.filename.endsWith('_DEBUG.png') && s.filename.endsWith('.png'))) {
+    console.error('No successful screenshots captured.');
+    process.exit(2);
+  }
+})();
+EOF
